# cookie

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  gradlew.bat  main.cpp  settings.gradle
app/: build.gradle
cookie/: build.gradle
cookie-engine/: Cookie.cpp  Cookie.h  Scene.hpp  main.cpp
cookie-engine.xcodeproj/: project.pbxproj
cookie/src/main/cpp/: .gitignore  CMakeLists.txt  README.md  cookie.cpp
cookie/src/main/cpp/lib/: ofbx.h  stb_image.h  tiny_gltf.h
cookie/src/main/cpp/src/: core.cpp  core.hpp
cookie/src/main/cpp/src/cookie-engine/: Cookie.cpp  Cookie.hpp
cookie/src/main/cpp/src/cookie-engine/algorithm/: Algorithm.cpp
cookie/src/main/cpp/src/cookie-engine/asset/: AssetImporter.cpp  AssetImporter.hpp
cookie/src/main/cpp/src/cookie-engine/base/: AssetImporter.cpp  AssetImporter.hpp  Batch.cpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp
cookie/src/main/cpp/src/cookie-engine/component/: Material.cpp  Material.h  Mesh.hpp  MeshStruct.h
cookie/src/main/cpp/src/cookie-engine/draw/: Cube.cpp
cookie/src/main/cpp/src/cookie-engine/draw/batch/: BatchManager.cpp
cookie/src/main/cpp/src/cookie-engine/errors/: GLErrorHandler.cpp  GLErrorHandler.hpp
cookie/src/main/cpp/src/cookie-engine/event/: EventHandler.cpp
cookie/src/main/cpp/src/cookie-engine/io/: FileManager.hpp
cookie/src/main/cpp/src/cookie-engine/platform_abstracts/: BufferStorage.hpp  CrossBatchBufferStorage.hpp  DrawUtils.h  ErrorHandler.hpp  GlobalBufferStorage.hpp  Initializer.hpp  PlatformSpecificData.hpp  TextureProcessor.hpp  Time.cpp
cookie/src/main/cpp/src/cookie-engine/raytracing/: Ray.hpp
cookie/src/main/cpp/src/cookie-engine/scene/: Scene.cpp  Scene.hpp  SceneSectorManager.hpp  Sector.cpp
cookie/src/main/cpp/src/cookie-engine/struct/: FramerateInfo.cpp  Material.h  Mesh.cpp  MeshStruct.h
cookie/src/main/cpp/src/cookie-engine/util/: FramerateInfo.hpp  Utils.hpp
cookie/src/main/cpp/src/factory/: CookieFactory.cpp  CookieFactory.hpp
cookie/src/main/cpp/src/opengl-api/: OpenGLPlatformSpecificData.cpp  OpenGLPlatformSpecificData.h
cookie/src/main/cpp/src/opengl-api/buffer/: OpenGLBufferStorage.cpp  OpenGLBufferStorage.hpp  OpenGLPSBufferData.h  OpenGlCrossBatchBufferStorage.cpp  OpenGlCrossBatchBufferStorage.hpp  OpenGlGlobalBufferStorage.cpp  OpenGlGlobalBufferStorage.hpp
cookie/src/main/cpp/src/opengl-api/draw/: OpenGLDrawUtils.cpp  OpenGLDrawUtils.h  OpenGLTextureProcessor.cpp  OpenGLTextureProcessor.hpp
cookie/src/main/cpp/src/opengl-api/initializer/: OpenGLCookieFactory.cpp  OpenGLCookieFactory.h  OpenGLInitializer.cpp  OpenGLInitializer.hpp
cookie/src/main/cpp/src/opengl-api/shader/: OpenGLShader.cpp  OpenGLShader.hpp
cookie/src/main/cpp/src/opengl-api/time/: OpenGLTime.cpp  OpenGLTime.hpp
cookie/src/main/cpp/src/platform/: AndroidFileManager.cpp  AndroidFileManager.hpp
cookie/src/main/cpp/src/util/: Macro.h
engine/: CMakeLists.txt
engine/resources/shader/fragment/: fragment.glsl  points_fragment_shader.glsl
engine/resources/shader/vertex/: points_vertex_shader.glsl  vertex.glsl
engine/src/: main.cpp
engine/src/cookie-engine/: Cookie.cpp  Cookie.hpp
engine/src/cookie-engine/algorithm/: Algorithm.hpp
engine/src/cookie-engine/asset/: AssetImporter.cpp  MeshStruct.h  PointsData.cpp  PointsData.h
engine/src/cookie-engine/component/: Component.hpp  Material.cpp  Material.h  MeshComponent.cpp  MeshComponent.hpp  SectorComponent.cpp  SectorComponent.hpp  Texture.cpp  Texture.hpp  TextureType.hpp
engine/src/cookie-engine/entity/: SceneObject.hpp  Transformation.cpp  Transformation.hpp
engine/src/cookie-engine/io/: FileManager.hpp
engine/src/cookie-engine/platform_abstracts/: Initializer.hpp  TextureProcessor.hpp
engine/src/cookie-engine/platform_abstracts/draw/: DrawUtils.h
engine/src/cookie-engine/platform_abstracts/storage/: BufferStorage.hpp  GlobalBufferStorage.hpp  PlatformSpecificData.hpp
engine/src/cookie-engine/raytracing/: AxisAlignedBoundingBox.hpp  Light.hpp  ObjectMetadata.hpp  PbMaterial.hpp
engine/src/cookie-engine/render/: Renderer.cpp  Renderer.hpp
engine/src/cookie-engine/render/base/: Renderable.cpp  Renderable.hpp  SubRenderable.cpp  SubRenderable.hpp
engine/src/cookie-engine/render/batch/: Batch.cpp  Batch.hpp  BatchManager.cpp  BatchManager.hpp
engine/src/cookie-engine/render/debug/: BoundsRenderer.cpp  BoundsRenderer.h  DebugRenderer.cpp  DebugRenderer.h
engine/src/cookie-engine/scene/: Scene.cpp  Scene.hpp  SceneSectorManager.cpp  SceneSectorManager.hpp  SceneSettings.cpp  SceneSettings.hpp
engine/src/cookie-engine/struct/: Bounds.cpp  Bounds.hpp
engine/src/cookie-engine/util/: Constants.cpp  CookieConstants.hpp  Utils.hpp
engine/src/factory/: CookieFactory.cpp  CookieFactory.hpp
engine/src/opengl-api/: OpenGLPlatformSpecificData.cpp  OpenGLPlatformSpecificData.h
engine/src/opengl-api/buffer/: OpenGLBufferStorage.cpp  OpenGLBufferStorage.hpp  OpenGlGlobalBufferStorage.cpp  OpenGlGlobalBufferStorage.hpp
engine/src/opengl-api/draw/: OpenGLDrawUtils.cpp  OpenGLDrawUtils.h  OpenGLTextureProcessor.hpp
engine/src/opengl-api/errors/: GLErrorHandler.cpp  GLErrorHandler.hpp
engine/src/opengl-api/initializer/: OpenGLCookieFactory.h  OpenGLInitializer.cpp
engine/src/opengl-api/shader/: OpenGLShader.cpp  OpenGLShader.hpp
engine/src/opengl-api/time/: OpenGLTime.hpp
engine/src/opengl_es-api/: EGLPlatformSpecificData.h
engine/src/opengl_es-api/buffer/: EGLBufferStorage.cpp  EGLGlobalBufferStorage.hpp
engine/src/opengl_es-api/draw/: EGLTextureProcessor.cpp
engine/src/opengl_es-api/initializer/: EGLCookieFactory.cpp  EGLCookieFactory.h  EGLInitializer.cpp
engine/src/opengl_es-api/shader/: EGLShader.hpp
engine/src/opengl_es-api/time/: EGLTime.cpp  EGLTime.hpp
engine/src/platform/default/: DefaultFileManager.cpp  DefaultFileManager.hpp
engine/src/toktx/: CMakeLists.txt
engine/src/util/: Macro.h  Util.h
factory/: CookieFactory.cpp  CookieFactory.h
jni/: CMakeLists.txt
jni/include/: com_antiufieievmichael_NativeBridge.h
jni/src/: NativeBridge.cpp
(+234 files in other folders)
